--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                      className="w-full h-auto rounded-md object-cover aspect-[3/4]"
                      onError={(e) => {
                        // Fallback if image isn't found
-                       e.target.src = "https://images.unsplash.com/photo-1516589178581-6cd7833ae3b2?q=80&w=600&auto=format&fit=crop";
+                       e.target.src = "IMG_4147.PNG";
                      }}
                    />
                    <div className="pt-3 pb-1">
@@ -392,4 +392,5 @@
       );
     </script>
   </body>
+
 </html>
