--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                      className="w-full h-auto rounded-md object-cover aspect-[3/4]"
                      onError={(e) => {
                        // Fallback if image isn't found
-                       e.target.src = "IMG_4147.PNG";
+                       e.target.src = "https://i.ibb.co/C5M3H6LW/IMG-4147.png";
                      }}
                    />
                    <div className="pt-3 pb-1">
@@ -394,3 +394,4 @@
   </body>
 
 </html>
+
