--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
       const APOLOGY_VIDEO_URL = "apology.mp4"; 
       const CUTE_VIDEO_URL = "surprise.mp4"; 
-      const COUPLE_PHOTO_URL = "IMG_4147.png";
+      const COUPLE_PHOTO_URL = "https://i.ibb.co/C5M3H6LW/IMG-4147.png";
 
       // --- GEMINI SERVICE ---
       // Uses the key from the environment shim or injection
@@ -394,4 +394,5 @@
   </body>
 
 </html>
+
 
